--- a/MyGame/MyGame/MyGame.csproj
+++ b/MyGame/MyGame/MyGame.csproj
@@ -18,6 +18,7 @@
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publier\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -30,7 +31,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="AmmoPack.cs" />
     <Compile Include="CadreGun.cs" />
+    <Compile Include="CadreTourelle.cs" />
     <Compile Include="Composants de base\Caméra1stPerson.cs" />
     <Compile Include="CubeCaméra.cs" />
     <Compile Include="Composants de base\ModelCollisionable.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="Composants Menu\MortPlayerMenu.cs" />
     <Compile Include="GererPack.cs" />
     <Compile Include="GererPath\Case.cs" />
+    <Compile Include="GestionnaireDeTourelle.cs" />
     <Compile Include="ILadder.cs" />
     <Compile Include="ILoadMap.cs" />
     <Compile Include="LoadBridgeMap.cs" />
@@ -197,7 +199,18 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PublishFile Include="MyGame.pdb">
+      <Visible>False</Visible>
+      <Group>
+      </Group>
+      <TargetPath>
+      </TargetPath>
+      <PublishState>Include</PublishState>
+      <IncludeHash>True</IncludeHash>
+      <FileType>File</FileType>
+    </PublishFile>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
